; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_inw_scbram.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_inw_scbram.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahd_softc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ahd_inw_scbram(%struct.ahd_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.ahd_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.ahd_softc* %0, %struct.ahd_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @ahd_inb_scbram(%struct.ahd_softc* %5, i32 %6)
  %8 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = add nsw i32 %9, 1
  %11 = call i32 @ahd_inb_scbram(%struct.ahd_softc* %8, i32 %10)
  %12 = shl i32 %11, 8
  %13 = or i32 %7, %12
  ret i32 %13
}

declare dso_local i32 @ahd_inb_scbram(%struct.ahd_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
